fix: fixed html overflow issue

--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,6 @@ html {
   font-weight: 400;
   font-style: normal;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 body {
